# ginkou-loader

./: Cargo.toml  bundle.nix  flake.nix  ginkou-loader.nix
.github/workflows/: build.yml  test.yml
src/: ipc.rs  main.rs  main.rs.orig
src/js/: index.js
