[package]
name = "ginkou-loader"
version = "0.3.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies.wry]
# version = "0.12.2"
# default-features = false
# features = ["file-drop", "protocol"]

[dependencies.wry]
git = "https://github.com/tauri-apps/wry"
rev = "e056fb2a15e29de1b8ed85a548cfeb1f85031357"
default-features=false

[dependencies]
anyhow = "1"
argh = "0.1.4"
dirs = "4.0.0"
# mime-sniffer = "0.1"
scopeguard = "1"
smol = "1"
tide = "0.16"
urlencoding = "2.1.0"
tap = "1.0.1"

