[package]
name = "ginkou-loader"
version = "0.4.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>", "Meade Kincke <meade@themelio.org"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.wry]
version = "0.15.0"
default-features = false
features = ["devtools"]

[dependencies]

anyhow = "1"
dirs = "4.0.0"
scopeguard = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
smol = "1"
tap = "1.0.1"
clap = { version="3.1.9", features=["derive"]}
rfd = "0.8.2"
tide = "0.16"
urlencoding = "2.1.0"
log = "0.4.16"
webbrowser = "0.7.1"
